[package]
name = "roadwork_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.21"
env_logger = "0.11.5"
tokio = { version = "1.39.1", features = ["full"] }
axum-auth = "0.7.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite", "macros"] }