[package]
name = "roadwork_server"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
bcrypt = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.47", features = ["full"] }
axum-auth = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0"